Rollback merge ModelMapper