@@ -1,63 +1,42 @@
 package com.edu.javeriana.backend.service;
 
-import com.edu.javeriana.backend.dto.ProcesoCompartirDTO;
-import com.edu.javeriana.backend.dto.ProcesoEdicionDTO;
+import com.edu.javeriana.backend.service.interfaces.*;
+
 import com.edu.javeriana.backend.dto.ProcesoRegistroDTO;
-import com.edu.javeriana.backend.exception.BusinessRuleException;
-import com.edu.javeriana.backend.exception.ResourceNotFoundException;
-import com.edu.javeriana.backend.model.*;
-import com.edu.javeriana.backend.repository.*;
+import com.edu.javeriana.backend.model.Empresa;
+import com.edu.javeriana.backend.model.Pool;
+import com.edu.javeriana.backend.model.Proceso;
+import com.edu.javeriana.backend.model.Usuario;
+import com.edu.javeriana.backend.repository.EmpresaRepository;
+import com.edu.javeriana.backend.repository.PoolRepository;
+import com.edu.javeriana.backend.repository.ProcesoRepository;
+import com.edu.javeriana.backend.repository.UsuarioRepository;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
+@RequiredArgsConstructor
+@Slf4j
 public class ProcesoService implements IProcesoService {
 
     private final ProcesoRepository procesoRepository;
     private final EmpresaRepository empresaRepository;
     private final UsuarioRepository usuarioRepository;
     private final PoolRepository poolRepository;
-    private final ProcesoCompartidoRepository procesoCompartidoRepository;
-    private final AsignacionRolPoolRepository asignacionRolPoolRepository;
-    private final HistorialProcesoRepository historialProcesoRepository;
-    private final ModelMapper modelMapper;
+    private final com.edu.javeriana.backend.repository.ProcesoCompartidoRepository procesoCompartidoRepository;
+    private final com.edu.javeriana.backend.repository.AsignacionRolPoolRepository asignacionRolPoolRepository;
 
-    public ProcesoService(ProcesoRepository procesoRepository,
-                          EmpresaRepository empresaRepository,
-                          UsuarioRepository usuarioRepository,
-                          PoolRepository poolRepository,
-                          ProcesoCompartidoRepository procesoCompartidoRepository,
-                          AsignacionRolPoolRepository asignacionRolPoolRepository,
-                          HistorialProcesoRepository historialProcesoRepository,
-                          ModelMapper modelMapper) {
-        this.procesoRepository           = procesoRepository;
-        this.empresaRepository           = empresaRepository;
-        this.usuarioRepository           = usuarioRepository;
-        this.poolRepository              = poolRepository;
-        this.procesoCompartidoRepository = procesoCompartidoRepository;
-        this.asignacionRolPoolRepository = asignacionRolPoolRepository;
-        this.historialProcesoRepository  = historialProcesoRepository;
-        this.modelMapper                 = modelMapper;
-    }
-
-    // ─── Helper: Proceso → ProcesoRegistroDTO ───────────────────────────────
-    private ProcesoRegistroDTO toRegistroDTO(Proceso p) {
-        ProcesoRegistroDTO dto = modelMapper.map(p, ProcesoRegistroDTO.class);
-        dto.setEmpresaId(p.getEmpresa().getId());
-        dto.setAutorId(p.getAutor().getId());
-        if (p.getPool() != null) dto.setPoolId(p.getPool().getId());
-        return dto;
-    }
+    private final com.edu.javeriana.backend.repository.HistorialProcesoRepository historialProcesoRepository;
 
     @Override
     @Transactional
-    public ProcesoRegistroDTO crearProceso(ProcesoRegistroDTO dto) {
+    public Proceso crearProceso(ProcesoRegistroDTO dto) {
+
+        // buscar la empresa
         Empresa empresa = empresaRepository.findById(dto.getEmpresaId())
                 .orElseThrow(() -> new IllegalArgumentException("Empresa no encontrada"));
 
@@ -71,13 +50,16 @@ public class ProcesoService implements IProcesoService {
         proceso.setEmpresa(empresa);
         proceso.setAutor(autor);
 
+        // HU-21: Asignar Pool
         Pool poolAsignado;
         if (dto.getPoolId() != null) {
             poolAsignado = poolRepository.findById(dto.getPoolId())
                     .orElseThrow(() -> new IllegalArgumentException("Pool no encontrado"));
-            if (!poolAsignado.getEmpresa().getId().equals(empresa.getId()))
+            if (!poolAsignado.getEmpresa().getId().equals(empresa.getId())) {
                 throw new IllegalArgumentException("El pool no pertenece a la misma empresa");
+            }
         } else {
+            // Pool por defecto de esa empresa (el primero)
             poolAsignado = poolRepository.findFirstByEmpresaIdOrderByIdAsc(empresa.getId())
                     .orElseThrow(() -> new IllegalArgumentException("La empresa no tiene ningún pool configurado"));
         }
@@ -85,87 +67,94 @@ public class ProcesoService implements IProcesoService {
 
         validarPermisoDeRol(autor.getId(), poolAsignado.getId(), "CREAR");
 
-        proceso.setEstado(EstadoProceso.BORRADOR);
+        // Nace explícitamente en estado BORRADOR
+        proceso.setEstado(com.edu.javeriana.backend.model.EstadoProceso.BORRADOR);
 
-        return toRegistroDTO(procesoRepository.save(proceso));
+        log.info("Proceso creado con nombre: {}", proceso.getNombre());
+
+        return procesoRepository.save(proceso);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<ProcesoRegistroDTO> listarPorEmpresa(Long empresaId) {
-        return procesoRepository.findByEmpresaId(empresaId)
-                .stream()
-                .map(this::toRegistroDTO)
-                .collect(Collectors.toList());
+    public List<Proceso> listarPorEmpresa(Long empresaId) {
+        return procesoRepository.findByEmpresaId(empresaId);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<ProcesoRegistroDTO> listarPorAutor(Long autorId) {
-        return procesoRepository.findByAutorId(autorId)
-                .stream()
-                .map(this::toRegistroDTO)
-                .collect(Collectors.toList());
+    public List<Proceso> listarPorAutor(Long autorId) {
+        return procesoRepository.findByAutorId(autorId);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public ProcesoRegistroDTO obtenerProcesoPorId(Long id) {
-        Proceso proceso = procesoRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Proceso no encontrado"));
-        return toRegistroDTO(proceso);
+    public Proceso obtenerProcesoPorId(Long id) {
+        return procesoRepository.findById(id)
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Proceso no encontrado"));
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<ProcesoRegistroDTO> filtrarProcesos(Long empresaId, String estadoStr, String categoria) {
-        EstadoProceso estado = null;
+    public boolean existeProcesoPorId(Long id) {
+        return procesoRepository.existsById(id);
+    }
+
+    @Override
+    public List<Proceso> filtrarProcesos(Long empresaId, String estadoStr, String categoria) {
+        com.edu.javeriana.backend.model.EstadoProceso estado = null;
         if (estadoStr != null && !estadoStr.isBlank()) {
             try {
-                estado = EstadoProceso.valueOf(estadoStr.toUpperCase());
+                estado = com.edu.javeriana.backend.model.EstadoProceso.valueOf(estadoStr.toUpperCase());
             } catch (IllegalArgumentException e) {
+                // If the state string is invalid, we could either throw exception or ignore.
+                // Let's throw.
                 throw new IllegalArgumentException("Estado no válido");
             }
         }
+
         String categoriaQuery = (categoria != null && !categoria.isBlank()) ? categoria : null;
-        return procesoRepository.buscarConFiltros(empresaId, estado, categoriaQuery)
-                .stream()
-                .map(this::toRegistroDTO)
-                .collect(Collectors.toList());
+
+        return procesoRepository.buscarConFiltros(empresaId, estado, categoriaQuery);
     }
 
     @Override
     @Transactional
-    public ProcesoEdicionDTO actualizarDefinicion(Long procesoId, String definicionJson) {
+    public Proceso actualizarDefinicion(Long procesoId, String definicionJson) {
         Proceso proceso = procesoRepository.findById(procesoId)
                 .orElseThrow(() -> new IllegalArgumentException("Proceso no encontrado"));
 
         proceso.setDefinicionJson(definicionJson);
-        Proceso actualizado = procesoRepository.save(proceso);
-
-        return modelMapper.map(actualizado, ProcesoEdicionDTO.class);
+        return procesoRepository.save(proceso);
     }
 
     @Override
     @Transactional
-    public ProcesoEdicionDTO editarProceso(Long id, ProcesoEdicionDTO dto) {
+    public Proceso editarProceso(Long id, com.edu.javeriana.backend.dto.ProcesoEdicionDTO dto) {
         Proceso proceso = procesoRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Proceso no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Proceso no encontrado"));
 
         validarPermisoDeRol(dto.getUsuarioId(), proceso.getPool().getId(), "EDITAR");
 
         Usuario usuario = usuarioRepository.findById(dto.getUsuarioId())
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Usuario no encontrado"));
 
+        // Validar permisos: solo el autor o un administrador pueden editar
         boolean esAutor = proceso.getAutor().getId().equals(usuario.getId());
         boolean esAdmin = "ADMINISTRADOR_EMPRESA".equals(usuario.getRol());
 
-        if (!esAutor && !esAdmin)
-            throw new BusinessRuleException("No tienes permisos para editar este proceso.");
+        if (!esAutor && !esAdmin) {
+            throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                    "No tienes permisos para editar este proceso. Solo el autor o un administrador pueden hacerlo.");
+        }
 
         StringBuilder cambios = new StringBuilder();
         if (!proceso.getNombre().equals(dto.getNombre())) {
-            cambios.append("Nombre cambiado de '").append(proceso.getNombre()).append("' a '").append(dto.getNombre()).append("'. ");
+            cambios.append("Nombre cambiado de '").append(proceso.getNombre()).append("' a '").append(dto.getNombre())
+                    .append("'. ");
             proceso.setNombre(dto.getNombre());
         }
         if (!proceso.getDescripcion().equals(dto.getDescripcion())) {
@@ -173,149 +162,234 @@ public class ProcesoService implements IProcesoService {
             proceso.setDescripcion(dto.getDescripcion());
         }
         if (!proceso.getCategoria().equals(dto.getCategoria())) {
-            cambios.append("Categoría cambiada de '").append(proceso.getCategoria()).append("' a '").append(dto.getCategoria()).append("'. ");
+            cambios.append("Categoría cambiada de '").append(proceso.getCategoria()).append("' a '")
+                    .append(dto.getCategoria()).append("'. ");
             proceso.setCategoria(dto.getCategoria());
         }
 
         if (cambios.length() > 0) {
             proceso = procesoRepository.save(proceso);
-            historialProcesoRepository.save(HistorialProceso.builder()
-                    .proceso(proceso).usuario(usuario)
-                    .accion("EDICION").detalle(cambios.toString().trim())
-                    .build());
+
+            com.edu.javeriana.backend.model.HistorialProceso historial = com.edu.javeriana.backend.model.HistorialProceso
+                    .builder()
+                    .proceso(proceso)
+                    .usuario(usuario)
+                    .accion("EDICION")
+                    .detalle(cambios.toString().trim())
+                    .build();
+
+            historialProcesoRepository.save(historial);
+            log.info("Proceso {} editado exitosamente", proceso.getId());
         }
 
-        ProcesoEdicionDTO response = modelMapper.map(proceso, ProcesoEdicionDTO.class);
-        response.setUsuarioId(dto.getUsuarioId());
-        return response;
+        return proceso;
     }
 
     @Override
     @Transactional
     public void eliminarProceso(Long procesoId, Long usuarioId) {
         Proceso proceso = procesoRepository.findById(procesoId)
-                .orElseThrow(() -> new ResourceNotFoundException("Proceso no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Proceso no encontrado"));
 
         validarPermisoDeRol(usuarioId, proceso.getPool().getId(), "ELIMINAR");
 
         Usuario usuario = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Usuario no encontrado"));
 
-        if (!"ADMINISTRADOR_EMPRESA".equals(usuario.getRol()))
-            throw new BusinessRuleException("Solo un administrador puede eliminar procesos.");
+        if (!"ADMINISTRADOR_EMPRESA".equals(usuario.getRol())) {
+            throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                    "Solo un administrador puede eliminar procesos.");
+        }
 
-        proceso.setEstado(EstadoProceso.INACTIVO);
+        proceso.setEstado(com.edu.javeriana.backend.model.EstadoProceso.INACTIVO);
         proceso = procesoRepository.save(proceso);
 
-        historialProcesoRepository.save(HistorialProceso.builder()
-                .proceso(proceso).usuario(usuario)
-                .accion("ELIMINACION").detalle("El proceso fue eliminado (estado cambiado a INACTIVO).")
-                .build());
+        com.edu.javeriana.backend.model.HistorialProceso historial = com.edu.javeriana.backend.model.HistorialProceso
+                .builder()
+                .proceso(proceso)
+                .usuario(usuario)
+                .accion("ELIMINACION")
+                .detalle("El proceso fue eliminado (estado cambiado a INACTIVO).")
+                .build();
+        historialProcesoRepository.save(historial);
+        log.info("Proceso {} eliminado", proceso.getId());
     }
 
     @Override
     @Transactional
-    public ProcesoEdicionDTO cambiarEstado(Long procesoId, EstadoProceso nuevoEstado, Long usuarioId) {
+    public Proceso cambiarEstado(Long procesoId, com.edu.javeriana.backend.model.EstadoProceso nuevoEstado,
+            Long usuarioId) {
         Proceso proceso = procesoRepository.findById(procesoId)
-                .orElseThrow(() -> new ResourceNotFoundException("Proceso no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Proceso no encontrado"));
 
-        validarPermisoDeRol(usuarioId, proceso.getPool().getId(),
-                nuevoEstado == EstadoProceso.PUBLICADO ? "PUBLICAR" : "EDITAR");
+        if (nuevoEstado == com.edu.javeriana.backend.model.EstadoProceso.PUBLICADO) {
+            validarPermisoDeRol(usuarioId, proceso.getPool().getId(), "PUBLICAR");
+        } else {
+            validarPermisoDeRol(usuarioId, proceso.getPool().getId(), "EDITAR");
+        }
 
         Usuario usuario = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Usuario no encontrado"));
 
-        if (nuevoEstado == EstadoProceso.PUBLICADO && !"ADMINISTRADOR_EMPRESA".equals(usuario.getRol()))
-            throw new BusinessRuleException("Solo un administrador puede publicar procesos.");
+        // Reglas de negocio básicas para cambio de estado:
+        // Solo el ADMIN_EMPRESA puede aprobar/publicar procesos.
+        if (nuevoEstado == com.edu.javeriana.backend.model.EstadoProceso.PUBLICADO) {
+            if (!"ADMINISTRADOR_EMPRESA".equals(usuario.getRol())) {
+                throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                        "Solo un administrador puede publicar procesos.");
+            }
+        }
 
         proceso.setEstado(nuevoEstado);
-        Proceso actualizado = procesoRepository.save(proceso);
-
-        ProcesoEdicionDTO response = modelMapper.map(actualizado, ProcesoEdicionDTO.class);
-        response.setUsuarioId(usuarioId);
-        return response;
+        log.info("Estado del proceso {} cambiado a {}", proceso.getId(), nuevoEstado);
+        return procesoRepository.save(proceso);
     }
 
     @Override
     @Transactional
-    public void compartirProceso(Long procesoId, ProcesoCompartirDTO dto) {
+    public void compartirProceso(Long procesoId, com.edu.javeriana.backend.dto.ProcesoCompartirDTO dto) {
         Proceso proceso = procesoRepository.findById(procesoId)
-                .orElseThrow(() -> new ResourceNotFoundException("Proceso no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Proceso no encontrado"));
 
         Usuario usuario = usuarioRepository.findById(dto.getUsuarioId())
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Usuario no encontrado"));
 
-        if (!"ADMINISTRADOR_EMPRESA".equals(usuario.getRol()) || !usuario.getEmpresa().getId().equals(proceso.getEmpresa().getId()))
-            throw new BusinessRuleException("Solo un administrador global de la empresa dueña puede compartir el proceso");
+        // Regla: Solo un administrador de la empresa dueña del proceso puede
+        // compartirlo
+        if (!"ADMINISTRADOR_EMPRESA".equals(usuario.getRol())
+                || !usuario.getEmpresa().getId().equals(proceso.getEmpresa().getId())) {
+            throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                    "Solo un administrador global de la empresa dueña puede compartir el proceso");
+        }
 
         Pool poolDestino = poolRepository.findById(dto.getPoolDestinoId())
-                .orElseThrow(() -> new ResourceNotFoundException("Pool destino no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Pool destino no encontrado"));
 
-        if (procesoCompartidoRepository.findByProcesoIdAndPoolDestinoId(procesoId, poolDestino.getId()).isPresent())
-            throw new BusinessRuleException("El proceso ya está compartido con este Pool");
+        // Validar si ya está compartido con ese pool
+        if (procesoCompartidoRepository.findByProcesoIdAndPoolDestinoId(procesoId, poolDestino.getId()).isPresent()) {
+            throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                    "El proceso ya está compartido con este Pool");
+        }
 
-        procesoCompartidoRepository.save(ProcesoCompartido.builder()
-                .proceso(proceso).poolDestino(poolDestino).permiso(dto.getPermiso()).build());
+        com.edu.javeriana.backend.model.ProcesoCompartido comparticion = com.edu.javeriana.backend.model.ProcesoCompartido
+                .builder()
+                .proceso(proceso)
+                .poolDestino(poolDestino)
+                .permiso(dto.getPermiso())
+                .build();
 
-        historialProcesoRepository.save(HistorialProceso.builder()
-                .proceso(proceso).usuario(usuario).accion("COMPARTIR")
-                .detalle("Proceso compartido con el Pool ID: " + poolDestino.getId() + " con permiso " + dto.getPermiso().name())
-                .build());
+        procesoCompartidoRepository.save(comparticion);
+
+        com.edu.javeriana.backend.model.HistorialProceso historial = com.edu.javeriana.backend.model.HistorialProceso
+                .builder()
+                .proceso(proceso)
+                .usuario(usuario)
+                .accion("COMPARTIR")
+                .detalle("Proceso compartido con el Pool ID: " + poolDestino.getId() + " con permiso "
+                        + dto.getPermiso().name())
+                .build();
+        historialProcesoRepository.save(historial);
     }
 
     @Override
     @Transactional
     public void quitarComparticionProceso(Long procesoId, Long poolDestinoId, Long usuarioId) {
         Proceso proceso = procesoRepository.findById(procesoId)
-                .orElseThrow(() -> new ResourceNotFoundException("Proceso no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Proceso no encontrado"));
 
         Usuario usuario = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Usuario no encontrado"));
 
-        if (!"ADMINISTRADOR_EMPRESA".equals(usuario.getRol()) || !usuario.getEmpresa().getId().equals(proceso.getEmpresa().getId()))
-            throw new BusinessRuleException("Solo un administrador de la empresa dueña puede quitar la compartición");
+        if (!"ADMINISTRADOR_EMPRESA".equals(usuario.getRol())
+                || !usuario.getEmpresa().getId().equals(proceso.getEmpresa().getId())) {
+            throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                    "Solo un administrador de la empresa dueña puede quitar la compartición");
+        }
 
         procesoCompartidoRepository.deleteByProcesoIdAndPoolDestinoId(procesoId, poolDestinoId);
 
-        historialProcesoRepository.save(HistorialProceso.builder()
-                .proceso(proceso).usuario(usuario).accion("QUITAR_COMPARTICION")
+        com.edu.javeriana.backend.model.HistorialProceso historial = com.edu.javeriana.backend.model.HistorialProceso
+                .builder()
+                .proceso(proceso)
+                .usuario(usuario)
+                .accion("QUITAR_COMPARTICION")
                 .detalle("Se revocó el acceso al proceso para el Pool ID: " + poolDestinoId)
-                .build());
+                .build();
+        historialProcesoRepository.save(historial);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<ProcesoRegistroDTO> listarProcesosCompartidosConPool(Long poolId, Long usuarioId) {
+    public List<Proceso> listarProcesosCompartidosConPool(Long poolId, Long usuarioId) {
         Pool pool = poolRepository.findById(poolId)
-                .orElseThrow(() -> new ResourceNotFoundException("Pool no encontrado"));
+                .orElseThrow(
+                        () -> new com.edu.javeriana.backend.exception.ResourceNotFoundException("Pool no encontrado"));
 
         Usuario usuario = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Usuario no encontrado"));
 
-        if (!usuario.getEmpresa().getId().equals(pool.getEmpresa().getId()))
-            throw new BusinessRuleException("No perteneces a la empresa de este pool");
+        // Regla: Para ver los procesos compartidos con un pool, debes pertenecer a la
+        // empresa de ese pool
+        if (!usuario.getEmpresa().getId().equals(pool.getEmpresa().getId())) {
+            throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                    "No perteneces a la empresa de este pool");
+        }
 
-        return procesoCompartidoRepository.findByPoolDestinoId(poolId)
-                .stream()
-                .map(c -> toRegistroDTO(c.getProceso()))
-                .collect(Collectors.toList());
+        List<com.edu.javeriana.backend.model.ProcesoCompartido> compartidos = procesoCompartidoRepository
+                .findByPoolDestinoId(poolId);
+
+        return compartidos.stream()
+                .map(com.edu.javeriana.backend.model.ProcesoCompartido::getProceso)
+                .toList();
     }
 
     private void validarPermisoDeRol(Long usuarioId, Long poolId, String accion) {
         Usuario solicitante = usuarioRepository.findById(usuarioId)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.ResourceNotFoundException(
+                        "Usuario no encontrado"));
 
-        if ("ADMINISTRADOR_EMPRESA".equals(solicitante.getRol())) return;
+        if ("ADMINISTRADOR_EMPRESA".equals(solicitante.getRol())) {
+            return;
+        }
 
-        AsignacionRolPool asignacion = asignacionRolPoolRepository.findByUsuarioIdAndPoolId(usuarioId, poolId)
-                .orElseThrow(() -> new BusinessRuleException("No cuentas con ningún rol asignado en este pool/departamento."));
+        com.edu.javeriana.backend.model.AsignacionRolPool asignacion = asignacionRolPoolRepository
+                .findByUsuarioIdAndPoolId(usuarioId, poolId)
+                .orElseThrow(() -> new com.edu.javeriana.backend.exception.BusinessRuleException(
+                        "No cuentas con ningún rol asignado en este pool/departamento."));
 
-        RolPool rol = asignacion.getRol();
+        com.edu.javeriana.backend.model.RolPool rol = asignacion.getRol();
+
         switch (accion) {
-            case "CREAR"    -> { if (!rol.isPermisoCrearProceso())    throw new BusinessRuleException("Tu rol en este pool no permite CREAR procesos"); }
-            case "EDITAR"   -> { if (!rol.isPermisoEditarProceso())   throw new BusinessRuleException("Tu rol en este pool no permite EDITAR procesos"); }
-            case "ELIMINAR" -> { if (!rol.isPermisoEliminarProceso()) throw new BusinessRuleException("Tu rol en este pool no permite ELIMINAR procesos"); }
-            case "PUBLICAR" -> { if (!rol.isPermisoPublicarProceso()) throw new BusinessRuleException("Tu rol en este pool no permite PUBLICAR procesos"); }
+            case "CREAR" -> {
+                if (!rol.isPermisoCrearProceso())
+                    throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                            "Tu rol en este pool no permite CREAR procesos");
+            }
+            case "EDITAR" -> {
+                if (!rol.isPermisoEditarProceso())
+                    throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                            "Tu rol en este pool no permite EDITAR procesos");
+            }
+            case "ELIMINAR" -> {
+                if (!rol.isPermisoEliminarProceso())
+                    throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                            "Tu rol en este pool no permite ELIMINAR procesos");
+            }
+            case "PUBLICAR" -> {
+                if (!rol.isPermisoPublicarProceso())
+                    throw new com.edu.javeriana.backend.exception.BusinessRuleException(
+                            "Tu rol en este pool no permite PUBLICAR procesos");
+            }
         }
     }
 }
